# kube-ingress-dns

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  devspace.yaml
.github/workflows/: docker-image.yml
manifest/: example-gateway.yaml  example-ingress.yaml  ingress-dns.yaml
src/: dnsserver.rs  k8s.rs  main.rs
